// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end_with_newline1: beautifiedText 1`] = `
if (true) {
helloWorld();
helloWorld();
}

`;

exports[`end_with_newline1: beautifiers 1`] = `
Array [
  "Prettier",
  "File",
]
`;

exports[`end_with_newline1: trimmedOptions 1`] = `
Object {
  "end_of_line": "CRLF",
  "indent_size": 0,
}
`;

exports[`end_with_newline2: beautifiedText 1`] = `
if (true) {
helloWorld();
helloWorld();
}

`;

exports[`end_with_newline2: beautifiers 1`] = `
Array [
  "Prettier",
]
`;

exports[`end_with_newline2: trimmedOptions 1`] = `
Object {
  "indent_size": 0,
}
`;

exports[`end_with_newline3: beautifiedText 1`] = `
if (true) {
helloWorld();
helloWorld();
}
`;

exports[`end_with_newline3: beautifiers 1`] = `
Array [
  "Prettier",
  "File",
]
`;

exports[`end_with_newline3: trimmedOptions 1`] = `
Object {
  "end_with_newline": false,
  "indent_size": 0,
}
`;
